changes for mobile

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <h1>COMUNITATEA <span>glo</span></h1>
         <p class="paragraph">
           Pentru comunitatea gloerilor, viața e despre a te bucura de fiecare
-          oportunitate și a găsi moduri plăcute prin care să <br />faci
-          schimbări mici ce au un impact major, în fiecare zi.
+          oportunitate și a găsi moduri plăcute prin care să faci schimbări mici
+          ce au un impact major, în fiecare zi. <br />
+          <br />
         </p>
         <p class="paragraph">
           Vrem să ai puterea de a face acele schimbări care ți se potrivesc cel
@@ -87,6 +88,22 @@
     </div>
 
     <div class="explanations">
+      <div class="firstContainer mobile">
+        <h4>
+          CE ȘTIM DESPRE POTENȚIALUL DE
+          <span>RISC REDUS</span> AL GLO?
+        </h4>
+        <p class="paragraphs">
+          glo este un produs care încălzește, nu arde tutunul și nu produce fum.
+          Este unul dintre acele produse noi despre care experți în sănătate
+          publică consideră că au potențial de risc redus comparativ cu
+          țigările. De aceea, am dezvoltat o serie de teste pentru a evalua
+          acest potențial. Rezultatele obținute în urma celor 329 de teste ne
+          oferă o imagine comprehensivă despre potențialul de risc redus al glo
+          comparativ cu țigările.
+        </p>
+      </div>
+
       <div class="leftSide">
         <img src="scientist-1.png" alt="Scientist" class="images" />
 
@@ -112,7 +129,7 @@
         </p>
       </div>
       <div class="rightSide">
-        <div class="firstContainer">
+        <div class="firstContainer desktop">
           <h4>
             CE ȘTIM DESPRE POTENȚIALUL DE
             <span>RISC REDUS</span> AL GLO?
